@@ -1257,6 +1257,11 @@ enum
 	GF_PROP_PCK_HLS_VARIANT_NAME = GF_4CC('D','H','L','N'),
 	GF_PROP_PID_HLS_KMS = GF_4CC('H','L','S','K'),
 	GF_PROP_PID_HLS_IV = GF_4CC('H','L','S','I'),
+	GF_PROP_PID_CLEARKEY_URI = GF_4CC('C','C','K','U'),
+	//internal
+	GF_PROP_PID_CLEARKEY_KID = GF_4CC('C','C','K','I'),
+
+
 	//internal property indicating pointer to associated GF_DownloadSession
 	GF_PROP_PID_DOWNLOAD_SESSION = GF_4CC('G','H','T','T'),
 
